# BuildSystemsTasks

./: .gitmodules  README.md
CodGen/: CMakeLists.txt  create_header.py  data.h
CodGen/WithCodeGen/: withCodeGen.cpp
CodGen/WithoutCodeGen/: withoutCodeGen.cpp
CrossCompilation/: README.md  Steps_to_installation.docx
Environment/: Dockerfile  check_script.sh
GradleRebuilding/: Dockerfile
GradleRebuilding/PatternsCollection/: settings.gradle
GradleRebuilding/PatternsCollection/AbstractFactory/cpp-source/main_serializer/: build.gradle
GradleRebuilding/PatternsCollection/Adapter/cpp-source/: build.gradle
GradleRebuilding/PatternsCollection/Bridge/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/Builder/cpp-source/main/: build.gradle  main.cpp
GradleRebuilding/PatternsCollection/ChainResponsibility/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/Command/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/Composite/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/Decorator/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/Facade/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/FactoryMethod/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/Mediator/cpp-source/main/: build.gradle
GradleRebuilding/PatternsCollection/Memento/cpp-source/main/: build.gradle
TP_CMakeLists/: CMakeLists.txt  README.md
TP_CMakeLists/A/: index.h  preparing.py
TP_CMakeLists/B/: CMakeLists.txt  lib.cpp  lib.h
TP_CMakeLists/C/: main.cpp  main.h
(+5 files in other folders)
